fix: swiper overlap with responsive navbar

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     cursor: pointer;
-    position: relative;
 }
 
 .card-wrapper .card {
@@ -11,7 +10,6 @@
     background-color: #fbe4b2;
     padding: 3px;
     overflow: hidden;
-    position: relative;
 }
 
 .image-content,
@@ -20,7 +18,6 @@
     flex-direction: column;
     align-items: flex-start;
     border-radius: 0.75rem;
-    position: relative;
 }
 
 .image-content {
