--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
+    z-index: 3;
     gap: 1rem;
     height: 70px;
     background-color: #45322b;
@@ -12,7 +14,6 @@
     border-radius: 0.7rem;
     overflow: hidden;
     padding-right: 1rem;
-    z-index: 1;
 }
 
 .brand {
